fixed templates view type toggle buttons alignment on windows

--- a/app/common/css/main.css
+++ b/app/common/css/main.css
@@ -3629,9 +3629,11 @@ h1.breadcrumb {
       width: auto;
       margin: 0; }
     .dispaly-mode .icon--display-mode {
-      font-size: 45px; }
+      font-size: 45px;
+      line-height: 45px; }
       .dispaly-mode .icon--display-mode--alt {
-        font-size: 41px; }
+        font-size: 42px;
+        line-height: 45px; }
 
 @media (max-width: 1100px) {
   .dispaly-mode .icon--display-mode {
